_archive/content-services/4.1/glossary/glossary_m.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Glossary
option: glossary
---

# M

Glossary terms starting with the letter M.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **MBean**

    An MBean \(managed bean\) is a Java object that represents a manageable resource, which is running in the JVM \(Java Virtual Machine\). Alfresco uses MBeans for JMX-based monitoring and management through read-only, configuration and management beans.

-   **metadata**

    Metadata describes data itself, and provides information about the content of the data.

-   **MIME type**

    Multipurpose Internet Mail Extensions \(MIME\) is a standard that extends an email to support processing of non-standard formats, for example, non-text or non-ASCII character sets.

    MIME types form a standard way of classifying file types on the Internet. Internet programs such as Web servers and browsers all have a list of MIME types, so that they can transfer files of the same type in the same way, no matter what operating system they are working in.

    A MIME type has two parts: a type and a subtype. They are separated by a forward slash \(/\). For example, the MIME type for Microsoft Word files is application and the subtype is msword. Together, the complete MIME type is application/msword. Source: [What is a MIME type?](http://http://www.aibn.com/help/Learn/mimetypes.html)

-   **MMT**

    See Module Management Tool.

-   **Model-View-Controller**

    Model-View-Controller \(MVC\) is a design pattern for implementing user interfaces. The model is central and consists of application data and business logic. The view is the output, and the controller accepts input and converts it to commands for the model or view.

-   **Module Management Tool \(MMT\)**

    The Alfresco Module Management Tool \(MMT\) helps to install and manage modules packaged as AMP \(Alfresco Module Package\) files. These AMP files are applied to a target WAR file; for example, share.war.

-   **Multi-tenancy**

    Alfresco supports multi-tenancy \(MT\) features that enable Alfresco to be configured as a true single-instance, multi-tenant environment. Multi-tenancy allows multiple, independent tenants to be hosted on a single instance, which can be installed either on a single server or across a cluster of servers.

-   **Multicast**

    Multicast is communication from a single sender to multiple recipients.

-   **MVC**

    See Model View Controller.

-   **MyBatis**

    MyBatis is open-source software distributed under the Apache License 2.0. It is a Java persistence framework that couples objects with stored procedures or SQL statements using an XML descriptor or annotations. Source: [http://en.wikipedia.org/wiki/MyBatis](http://en.wikipedia.org/wiki/MyBatis)


